# RAG-knowledge-engine

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
app/pages/: 1_Upload_Documents.py  2_Chat.py  3_Settings.py
data/sample/: ml_glossary.csv  rag_survey.md  urls.txt
docs/: architecture.md
notebooks/: 01_what_is_rag.ipynb  02_document_loading.ipynb  03_chunking_strategies.ipynb  04_embeddings_and_vectorstores.ipynb  05_retrieval_strategies.ipynb  06_rag_chain.ipynb  07_swappable_llm_providers.ipynb  08_evaluation.ipynb  09_advanced_techniques.ipynb
src/rag_engine/: config.py
src/rag_engine/chains/: prompts.py  rag_chain.py
src/rag_engine/chunking/: strategies.py
src/rag_engine/embeddings/: manager.py
src/rag_engine/evaluation/: evaluator.py
src/rag_engine/llm/: provider.py
src/rag_engine/loaders/: __init__.py  csv_loader.py  markdown_loader.py  pdf_loader.py  web_loader.py
src/rag_engine/retrieval/: retriever.py
src/rag_engine/vectorstore/: chroma_store.py
tests/: conftest.py  test_chains.py  test_chunking.py  test_llm_provider.py  test_loaders.py  test_retrieval.py  test_vectorstore.py
